--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : Anna Quinlan                              
+your_name                                 :                             
 your_link                                 : https://novalegra.github.io/                     
 your_city                                 :                                
 email_address                             : aquinlan@stanford.edu
