Remove more personal info

--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,13 @@ enable_smart_app_banner                   : true                                
 
 # Information About Yourself
 your_name                                 :                             
-your_link                                 : https://novalegra.github.io/                     
+your_link                                 :                      
 your_city                                 :                                
 email_address                             : aquinlan@stanford.edu
 facebook_username                         :                                           
 instagram_username                        :
 twitter_username                          :
-github_username                           : novalegra
+github_username                           : 
 youtube_username                          :
 
 
